# doc-table

./: .gitignore  entrypoint.sh  main.py  prod.env  pyproject.toml
docker/: Dockerfile  build.sh  run-docker.sh
table/: mathpix_cli.py  schema.py  settings.py
